--- a/css/layout/media.scss
+++ b/css/layout/media.scss
@@ -2,3 +2,14 @@
   @return $px / 16px + 0rem;
 }
 
+@mixin tablets {
+  @media screen and (max-width: 768px) {
+    @content;    
+  }
+}
+
+@mixin phones {
+  @media screen and (max-width: 480px) {
+    @content;
+  }
+}
