--- a/main.scss
+++ b/main.scss
@@ -6,13 +6,13 @@
 
 @import "css/font/stylesheet";
 
-// base
-
-@import "css/layout/layout";
-
-//media
+// media
 
 @import "css/layout/media";
+
+//b
+
+@import "css/layout/layout";
 
 // color
 
