--- a/css/blocks/comment.scss
+++ b/css/blocks/comment.scss
@@ -15,6 +15,11 @@
       opacity: 1;
     }
   }
+  @include tablets {
+    flex-basis: 50%;
+    height: 25%;
+    position: relative;
+  }
 }
 
 .comment__photo {
@@ -49,4 +54,16 @@
   background-color: rgba($black, 0.3);
   padding: rem(50px) rem(20px);
   transition: opacity .4s;
+  @include tablets {
+    align-items: center;
+  }
+  
+  .comment__text>p {
+    @include tablets {
+      text-align: center;
+    }
+    @include phones {
+      display: none;
+    }
+  }
 }
