--- a/css/blocks/footer.scss
+++ b/css/blocks/footer.scss
@@ -19,10 +19,16 @@
   &__container{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    @include phones {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   &__addres {
-    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;    
@@ -32,10 +38,19 @@
     font-weight: 500;
     color: $white;
     padding: rem(10px) 0;
+    white-space: nowrap;
   }
 
   &__text {
     padding: rem(5px) 0;
+  }
+
+  &__phone {
+    @include phones {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   &__phone_number{
@@ -49,7 +64,6 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 50%;
   }
 
   &__social_list {
