--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -3,10 +3,59 @@
   width: 100%;
   padding-top: rem(12px);
   z-index: 1;
+  &__order {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  &__burger__menu {
+    position: relative;
+    height: rem(28px);
+    align-items: center;
+    display: none;
+    margin: rem(0px) rem(10px) rem(0px) rem(0px);
+    @include tablets {
+      display: flex;
+    }
+
+    &__link {
+
+      &,
+      &:before,
+      &:after {
+        background: #fff;
+        width: rem(24px);
+        height: rem(4px);
+        border-radius: rem(3px);
+      }
+
+      &:before,
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+      }
+
+      &:before {
+        top: 0;
+      }
+
+      &:after {
+        bottom: 0;
+      }
+    }
+  }
 }
 
 .header__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @include tablets {
+  }
+  &__order {
+    display: flex;
+    flex-direction: row;
+  }
 }
