--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -15,18 +15,9 @@
 .order__form-tag {
   @include tablets {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+  margin-bottom: rem(15px);
 }
 
-.order__form {
-  margin-left: -5%;
-  @include tablets {
-    margin: 0;
-  }
-}
 
 .order__form-col {
   float: left;
@@ -34,166 +25,7 @@
   margin-left: 5%;
 }
 
-.order__form-row {
-  margin-bottom: rem(16px);
-  display: flex;
-}
-
-.order__form-label {
-  margin-bottom: rem(17px);
-  @include ubuntu;
-  color: $white;
-  font-size: rem(14px);
-}
-
-.order__form-input {
-  font-size: rem(14px);
-  padding: rem(10px);
-  padding: rem(5px) rem(10px);
-  border: rem(1px) solid transparent;
-  border-radius: rem(5px);
-  width: 100%;
-  &:active {
-    border-radius: rem(1px) solid $yellow;
+  &:first-child {
+    margin-left: 0;
   }
-}
-
-.order__form-block {
-  display: block;
-  width: 100%;
-}
-
-.order__form-row_double {
-  margin-left: rem(-20px);
-
-  .order__form-block {
-    width: calc(100% / 2 - 20px);
-    margin-left: rem(20px);
-  }
-}
-
-.order__form-row_quatro {
-  margin-left: rem(-20px);
-
-  .order__form-block {
-    width: calc(100% / 4 - 20px);
-    margin-left: rem(20px);
-  }
-}
-
-.order__form-input_textarea {
-  height: rem(110px);
-  resize: none;
-}
-
-.order__radio {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  white-space: nowrap;
-  margin-right: rem(20px);
-  vertical-align: middle;
-  cursor: pointer;
-}
-
-.order__radio-elem {
-  position: absolute;
-  top: 0;
-  left: rem(00px);
-}
-
-.order__radio-fake {
-  width: rem(16px);
-  height: rem(16px);
-  border-radius: 50%;
-  background:$white;
-  vertical-align: middle;
-  position: relative;
-
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: rem(0px);
-    height: rem(0px);
-    border-radius: 50%;
-    background: $red;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: width .3s, height .3s;
-  }
-}
-
-.order__radio-elem:checked {
-  & + .order__radio-fake {
-    &:after {
-      width: rem(8px);
-      height: rem(8px);
-    }
-  }
-}
-
-.order__radio-title {
-  vertical-align: middle;
-  font-size: rem(14px);
-  color: $white;
-  margin-left: rem(10px);
-}
-
-.order__radio_checkbox {
-  .order__radio-fake {
-    border-radius: rem(0px);
-  }
-
-  .order__radio-elem {
-    & + .order__radio-fake {
-      &:after {
-        background: transparent;
-      }
-    }
-  }
-
-  .order__radio-elem:checked {
-    & +.order__radio-fake {
-      &:after {
-        background: url("./my_page/svg/cheked.svg") 50% no-repeat transparent;
-        background-size: cover;
-        width: rem(11px);
-        height: rem(9px);
-      }
-    }
-  }
-}
-
-.btn {
-  vertical-align: middle;
-  margin-right: rem(20px);
-  border: 0;
-  background: $red;
-  font-size: rem(13px);
-  text-transform: uppercase;
-  border-radius: rem(5px);
-  color: $white;
-  @include ubuntu;
-  padding: rem(10px) rem(15px);
-  cursor: pointer;
-}
-
-.order__form-button_reset {
-  vertical-align: middle;
-  margin-right: rem(20px);
-  border: 0;
-  background: $red;
-  font-size: rem(13px);
-  text-transform: uppercase;
-  border-radius: rem(5px);
-  color: $white;
-  @include ubuntu;
-  padding: rem(10px) rem(15px);
-  cursor: pointer;
-  padding-left: 0;
-  padding-right: 0;
-  text-transform: none;
-  background: transparent;
 }
