--- a/css/blocks/burgermenu.scss
+++ b/css/blocks/burgermenu.scss
@@ -6,6 +6,7 @@
   margin: rem(0px) rem(10px) rem(0px) rem(0px);
     @include tablets {
       display: flex;
+      margin-left: rem(20px);
     }
 }
 
