--- a/main.css
+++ b/main.css
@@ -848,9 +848,12 @@ p {
   position: relative; }
   .menu__title {
     top: 6.875rem;
-    left: 94;
+    left: 5.875rem;
     position: absolute;
     color: #fff; }
+    @media screen and (max-width: 480px) {
+      .menu__title {
+        text-align: center; } }
   .menu-acco {
     position: absolute;
     right: 0;
@@ -1007,13 +1010,59 @@ p {
   background-size: cover;
   background-position: center center;
   position: relative; }
+  .form .form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row; }
+    @media screen and (max-width: 768px) {
+      .form .form {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        width: 60%;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        margin-left: 20%; } }
+    @media screen and (max-width: 480px) {
+      .form .form {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        width: 100%;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        margin: 0; } }
   .form__title {
     text-align: center;
     color: #f9b43b;
     margin-bottom: 3.125rem; }
-
-@media screen and (max-width: 768px) {
-  .order__form-tag {
+  .form__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 0.75rem;
+    margin-right: -1.25rem; }
+  .form__col {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1; }
+    .form__col:first-child {
+      margin-left: -1.25rem; }
+  .form__label {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1021,163 +1070,133 @@ p {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center; } }
-
-.order__form {
-  margin-left: -5%; }
-  @media screen and (max-width: 768px) {
-    .order__form {
-      margin: 0; } }
-
-.order__form-col {
-  float: left;
-  width: 45%;
-  margin-left: 5%; }
-
-.order__form-row {
-  margin-bottom: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
-
-.order__form-label {
-  margin-bottom: 1.0625rem;
-  font-family: 'Ubuntu', Helvetica, sans-serif;
-  font-weight: 300;
-  color: #fff;
-  font-size: 0.875rem; }
-
-.order__form-input {
-  font-size: 0.875rem;
-  padding: 0.625rem;
-  padding: 0.3125rem 0.625rem;
-  border: 0.0625rem solid transparent;
-  border-radius: 0.3125rem;
-  width: 100%; }
-  .order__form-input:active {
-    border-radius: 0.0625rem solid #f9b43b; }
-
-.order__form-block {
-  display: block;
-  width: 100%; }
-
-.order__form-row_double {
-  margin-left: -1.25rem; }
-  .order__form-row_double .order__form-block {
-    width: calc(100% / 2 - 20px);
     margin-left: 1.25rem; }
-
-.order__form-row_quatro {
-  margin-left: -1.25rem; }
-  .order__form-row_quatro .order__form-block {
-    width: calc(100% / 4 - 20px);
-    margin-left: 1.25rem; }
-
-.order__form-input_textarea {
-  height: 6.875rem;
-  resize: none; }
-
-.order__radio {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  white-space: nowrap;
-  margin-right: 1.25rem;
-  vertical-align: middle;
-  cursor: pointer; }
-
-.order__radio-elem {
-  position: absolute;
-  top: 0;
-  left: 0rem; }
-
-.order__radio-fake {
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-  background: #fff;
-  vertical-align: middle;
-  position: relative; }
-  .order__radio-fake:after {
-    content: "";
+    .form__label_title {
+      font-size: 0.875rem;
+      color: #fff;
+      font-family: 'Ubuntu', Helvetica, sans-serif;
+      font-weight: 300;
+      margin-bottom: 0.625rem; }
+    .form__label textarea {
+      resize: none; }
+  .form__input {
+    border-radius: 6px;
+    background-color: #fff;
+    font-size: 0.875rem;
+    padding: 0.625rem 1.25rem;
     display: block;
-    position: absolute;
-    width: 0rem;
-    height: 0rem;
-    border-radius: 50%;
-    background: #e35028;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    -webkit-transition: width .3s, height .3s;
-    -o-transition: width .3s, height .3s;
-    transition: width .3s, height .3s; }
-
-.order__radio-elem:checked + .order__radio-fake:after {
-  width: 0.5rem;
-  height: 0.5rem; }
-
-.order__radio-title {
-  vertical-align: middle;
-  font-size: 0.875rem;
-  color: #fff;
-  margin-left: 0.625rem; }
-
-.order__radio_checkbox .order__radio-fake {
-  border-radius: 0rem; }
-
-.order__radio_checkbox .order__radio-elem + .order__radio-fake:after {
-  background: transparent; }
-
-.order__radio_checkbox .order__radio-elem:checked + .order__radio-fake:after {
-  background: url("./my_page/svg/cheked.svg") 50% no-repeat transparent;
-  background-size: cover;
-  width: 0.6875rem;
-  height: 0.5625rem; }
-
-.btn {
-  vertical-align: middle;
-  margin-right: 1.25rem;
-  border: 0;
-  background: #e35028;
-  font-size: 0.8125rem;
-  text-transform: uppercase;
-  border-radius: 0.3125rem;
-  color: #fff;
-  font-family: 'Ubuntu', Helvetica, sans-serif;
-  font-weight: 300;
-  padding: 0.625rem 0.9375rem;
-  cursor: pointer; }
-
-.order__form-button_reset {
-  vertical-align: middle;
-  margin-right: 1.25rem;
-  border: 0;
-  background: #e35028;
-  font-size: 0.8125rem;
-  text-transform: uppercase;
-  border-radius: 0.3125rem;
-  color: #fff;
-  font-family: 'Ubuntu', Helvetica, sans-serif;
-  font-weight: 300;
-  padding: 0.625rem 0.9375rem;
-  cursor: pointer;
-  padding-left: 0;
-  padding-right: 0;
-  text-transform: none;
-  background: transparent; }
+    width: 100%;
+    border: none;
+    outline: none;
+    border: 0.125rem solid transparent;
+    width: 100%; }
+    .form__input:focus {
+      border: 0.125rem solid #f9b43b; }
+  .form__comment {
+    width: 100%;
+    margin: 0 1.25rem 0 2.5rem; }
+    @media screen and (max-width: 768px) {
+      .form__comment {
+        margin: 0; } }
+    @media screen and (max-width: 480px) {
+      .form__comment {
+        text-align: center; } }
+  .form__radio {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-top: 0.3125rem;
+    margin-right: 1.25rem;
+    white-space: nowrap;
+    font-family: 'Ubuntu', Helvetica, sans-serif;
+    font-weight: 300;
+    color: #fff; }
+    .form__radio_real {
+      width: 0.625rem;
+      height: 0.625rem;
+      margin: 0 -0.625rem -0.625rem 0;
+      opacity: 0; }
+      .form__radio_real:checked ~ .form__radio_style {
+        border: 0.0625rem solid #e35028;
+        background-image: -webkit-gradient(linear, left top, left bottom, ), #ededed 0%, white 0%;
+        background-image: -webkit-linear-gradient(top), #ededed 0%, white 0%;
+        background-image: -o-linear-gradient(top), #ededed 0%, white 0%;
+        background-image: linear-gradient(180deg), #ededed 0%, white 0%; }
+        .form__radio_real:checked ~ .form__radio_style::after {
+          opacity: 1; }
+    .form__radio_style {
+      display: inline-block;
+      width: 1.25rem;
+      height: 1.25rem;
+      line-height: 1.25rem;
+      margin-right: 0.625rem;
+      border-radius: 50%;
+      border: 0.0625rem solid #e35028;
+      background-image: -webkit-gradient(linear, left top, left bottom, ), #ededed 0%, white 0%;
+      background-image: -webkit-linear-gradient(top), #ededed 0%, white 0%;
+      background-image: -o-linear-gradient(top), #ededed 0%, white 0%;
+      background-image: linear-gradient(180deg), #ededed 0%, white 0%;
+      position: relative;
+      vertical-align: middle; }
+      .form__radio_style::after {
+        content: '';
+        width: 0.5rem;
+        height: 0.5rem;
+        display: block;
+        background: #e35028;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        border-radius: 50%;
+        opacity: 0; }
+    .form__radio_check {
+      display: inline-block;
+      width: 0.625rem;
+      height: 0.625rem;
+      margin: 0 -0.625rem -0.625rem 0;
+      opacity: 0; }
+      .form__radio_check:checked ~ .form__radio_style-check::after {
+        opacity: 1; }
+    .form__radio_style-check {
+      display: inline-block;
+      width: 1.25rem;
+      height: 1.25rem;
+      line-height: 1.25rem;
+      margin-right: 0.625rem;
+      background-color: #fff;
+      position: relative;
+      vertical-align: middle; }
+      .form__radio_style-check::after {
+        content: '';
+        width: 0.625rem;
+        height: 0.625rem;
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        background-image: url(./my_page/svg/cheked.svg.png) center center/no-repeat cover; }
+  .form__footer {
+    margin-top: 20px; }
+  .form__btn {
+    border: inherit; }
+    .form__btn_reset {
+      margin-left: 0.625rem;
+      font-family: 'Ubuntu', Helvetica, sans-serif;
+      font-weight: 300;
+      color: #fff;
+      background: transparent;
+      border: transparent; }
+      .form__btn_reset:focus {
+        border: transparent; }
 
 .footer {
   background-image: url(./my_page/img/pagefooter/bgfooter.png);
@@ -1327,7 +1346,8 @@ p {
     .burger__menu {
       display: -webkit-box;
       display: -ms-flexbox;
-      display: flex; } }
+      display: flex;
+      margin-left: 1.25rem; } }
 
 .burger__menu__link, .burger__menu__link:before, .burger__menu__link:after {
   background: #fff;
