--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -9,43 +9,6 @@
     justify-content: center;
     align-items: center;
   }
-  &__burger__menu {
-    position: relative;
-    height: rem(28px);
-    align-items: center;
-    display: none;
-    margin: rem(0px) rem(10px) rem(0px) rem(0px);
-    @include tablets {
-      display: flex;
-    }
-
-    &__link {
-
-      &,
-      &:before,
-      &:after {
-        background: #fff;
-        width: rem(24px);
-        height: rem(4px);
-        border-radius: rem(3px);
-      }
-
-      &:before,
-      &:after {
-        content: "";
-        display: block;
-        position: absolute;
-      }
-
-      &:before {
-        top: 0;
-      }
-
-      &:after {
-        bottom: 0;
-      }
-    }
-  }
 }
 
 .header__container {
@@ -53,9 +16,14 @@
   justify-content: space-between;
   align-items: center;
   @include tablets {
-  }
-  &__order {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.header__order__btn {
+  @include tablets {
+    margin-right: rem(80px);
   }
 }
