--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -60,7 +60,7 @@
   }
   
   &__input {
-    border-radius: 6px;
+    border-radius: rem(6px);
     background-color: #fff;
     font-size: rem(14px);
     padding: rem(10px) rem(20px);
@@ -82,6 +82,7 @@
     }
     @include phones {
       text-align: center;
+      margin: 0 auto;
     }
   }
   
@@ -100,7 +101,6 @@
         opacity: 0;
         &:checked ~ .form__radio_style {
           border: rem(1px) solid $red;
-          background-image: linear-gradient(180deg), rgb(237, 237, 237) 0%, rgb(255, 255, 255) 0%;
           &::after {
             opacity: 1;
           }
@@ -114,7 +114,6 @@
       margin-right: rem(10px);
       border-radius: 50%;
       border: rem(1px) solid $red;
-      background-image: linear-gradient(180deg), rgb(237, 237, 237) 0%, rgb(255, 255, 255) 0%;
       position: relative;
       vertical-align: middle;
       &::after {
@@ -146,7 +145,7 @@
       height: rem(10px);
       margin: 0 rem(-10px) rem(-10px) 0;
       opacity: 0;
-        &:checked~.form__radio_style-check {
+        &:checked ~ .form__radio_style-check {
           &::after {
             opacity: 1;
           }
@@ -163,8 +162,6 @@
 
         &::after {
           content: '';
-          width: rem(10px);
-          height: rem(10px);
           display: block;
           position: absolute;
           top: 50%;
@@ -197,8 +194,5 @@
         border: transparent;
       }
     }
-  }
-  &__label>textarea {
-    resize: none;
   }
 }
